chore(SHS-6353): fix color contrast issue in captions/credits

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.text.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.text.scss
@@ -376,7 +376,7 @@
 
   @include grid-media-min('sm') {
     // the right side calculation is lower to adjust for the margin-right on the child elements
-    padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
+    padding: hb-calculate-rems(112px) hb-calculate-rems(12px)
       hb-calculate-rems(16px) 15%;
   }
 
@@ -386,7 +386,7 @@
     .paragraph--type--hs-carousel & {
       // the percentage on this left side is larger to prevent the caption from running under carousel overlay
       @include grid-media-min('md') {
-        padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
+        padding: hb-calculate-rems(112px) hb-calculate-rems(12px)
           hb-calculate-rems(16px) 58%;
       }
     }
@@ -399,7 +399,7 @@
   .hb-card__graphics--has-date & {
     @include grid-media-min('sm') {
       // the right side calculation is lower to adjust for the margin-right on the child elements
-      padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
+      padding: hb-calculate-rems(112px) hb-calculate-rems(12px)
         hb-calculate-rems(16px) hb-calculate-rems(100px);
     }
   }
